# RISI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-STATEMENT.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: risi-vault-ops.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
configs/: reference.yaml
docs/: architecture.md  roadmap.md  status-and-direction.md
docs/decisions/: 0001-standalone-agent-operable-harness.md  0002-guarded-external-target-campaigns.md  README.md
documentation/: changelog.mdx  concepts.mdx  docs.json  introduction.mdx  operator-guide.mdx  quickstart.mdx  responsible-use.mdx  risi-c-reference.mdx
documentation/architecture/: inference-servers.mdx  overview.mdx
scenarios/: README.md
scenarios/examples/: README.md  dat-01-local-reference.approval.json  dat-01-local-reference.manifest.json  dat-01-pure-read.json  dat-02-local-reference.approval.json  dat-02-local-reference.manifest.json  dat-02-pure-read.json  dep-01-craf-reference.approval.json  dep-01-craf-reference.manifest.json  dep-01-craf.json  dep-01-local-reference.approval.json  dep-01-pure-read.json  dep-02-risi-c-reference.approval.json  dep-02-risi-c-reference.manifest.json  dep-02-risi-c.json  dep-03-local-reference.approval.json  dep-03-local-reference.manifest.json  dep-03-pure-read.json  fin-01-local-reference.approval.json  fin-01-local-reference.manifest.json  fin-01-pure-read.json  iam-01-local-reference.approval.json  iam-01-local-reference.manifest.json  (+10 more)
schemas/: approval.schema.json  campaign-approval.schema.json  campaign-manifest.schema.json  campaign-result.schema.json  craf-assessment.schema.json  decision.schema.json  deviation.schema.json  event.schema.json  evidence-bundle.schema.json  external-target-checkpoint.schema.json  external-target-manifest.schema.json  health-sample.schema.json  observer-view.schema.json  preflight-result.schema.json  result.schema.json  risi-c-assessment.schema.json  run-manifest.schema.json  scenario.schema.json  state.schema.json
tests/: test_adapter_contract.py  test_agent_conformance.py  test_budget.py  test_campaign_evidence.py  test_campaign_lifecycle.py  test_campaign_operator.py  test_campaign_statistics.py  test_canonical.py  test_confidentiality.py  test_craf_reference.py  test_dify_adapter.py  test_dify_integration.py  test_e1_preflight.py  test_evidence_operations.py  test_external_target_contract.py  test_models.py  test_operator.py  test_reference_adapter.py  test_risi_c_reference.py  test_run_pipeline.py  test_scenario_bundle.py  test_scenarios.py  test_schema_contracts.py  test_smoke.py  test_taxonomy_controls.py  test_trace.py
(+49 files in other folders)
