[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risi"
version = "0.1.0"
description = "Reference tooling for Retrieval-Induced State Interference research"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Richard Spicer", email = "richard@richardspicer.io" },
]
keywords = ["security", "ai", "agent-memory", "risi", "craf"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9",
]

[project.scripts]
risi = "risi.cli:app"

[project.urls]
Repository = "https://github.com/q-uestionable-AI/RISI"
Issues = "https://github.com/q-uestionable-AI/RISI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/risi"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.8",
    "pip-audit>=2.7",
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A", "B", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "I", "N", "PERF", "PLC",
    "PLE", "PLR", "PLW", "PTH", "RET", "RUF", "S", "SIM", "T20", "TRY", "UP", "W",
]
ignore = [
    "D100",     # Module docstrings are encouraged but not required.
    "D104",     # Package docstrings are encouraged but not required.
    "D107",     # The public class docstring documents constructor behavior.
    "S101",     # Assertions are expected in tests.
    "PLC0415",  # Deferred imports may be intentional.
    "PLR2004",  # Thresholds and protocol constants are clearer inline in tests.
    "TRY003",   # Descriptive exception messages are preferred.
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "N806", "PLR0913", "S"]
"src/risi/cli.py" = ["B008"]

[tool.bandit]
skips = [
    "B101",  # Assertions are permitted in tests; production assertions remain Ruff-checked.
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "integration: marks tests requiring isolated external services",
]
